@@ -1,5 +1,5 @@
 ###
-### $Id: FAQ.pm 13989 2010-05-14 21:25:17Z timbo $
+### $Id: FAQ.pm 14270 2010-07-22 17:22:06Z timbo $
 ###
 ### DBI Frequently Asked Questions POD
 ###
@@ -21,7 +21,7 @@
 
 package DBI::FAQ;
 
-our $VERSION = sprintf("1.%06d", q$Revision: 13989 $ =~ /(\d+)/o);
+our $VERSION = sprintf("1.%06d", q$Revision: 14270 $ =~ /(\d+)/o);
 
 
 =head1 NAME
@@ -63,10 +63,10 @@ the DBI Mailing Lists and personally to members of the DBI development team.
 
 To quote Tim Bunce, the architect and author of DBI:
 
-    ``DBI is a database access Application Programming Interface (API)
+      DBI is a database access Application Programming Interface (API)
       for the Perl Language. The DBI API Specification defines a set
       of functions, variables and conventions that provide a consistent
-      database interface independant of the actual database being used.''
+      database interface independent of the actual database being used.
 
 In simple language, the DBI interface allows users to access multiple database
 types transparently. So, if you connecting to an Oracle, Informix, mSQL, Sybase
